# mann-kendall

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  cbindgen.toml  md.py
examples/cpp/: Makefile  main.cpp  mann_kendall.h
examples/pytest/: main.py  requirements.txt
examples/simple/: main.rs
src/: lib.rs  mann_kendall.rs  mk.rs
tests/: mk.rs
